[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10.0"
clap = "4.0.29"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
egui = "0.29.1"
egui_extras = { version = "*", features = ["all_loaders"] }
eframe = "0.29.1"
image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for
rfd = "0.15.1"
hex = "0.4.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3"
once_cell = "1.20.2"
chrono = "0.4.39"